@@ -1,3 +1,7 @@
+2014-07-15  Marek Polacek  <polacek@redhat.com>
+
+	* gcc.dg/ubsan/bounds-1.c: New test.
+
 2014-06-30  Marek Polacek  <polacek@redhat.com>
 
 	* c-c++-common/ubsan/attrib-2.c: New test.
