@@ -1,3 +1,10 @@
+2014-07-03  Marek Polacek  <polacek@redhat.com>
+
+	* doc/invoke.texi (-fsanitize=bounds): Tweak wording.
+	(-fsanitize=float-divide-by-zero): Move to the table with
+	-fsanitize=undefined suboptions.
+	(-fsanitize=float-cast-overflow): Likewise.
+
 2014-04-22  James Greenhalgh  <james.greenhalgh@arm.com>
 
 	* config/aarch64/aarch64-simd.md
